# bobroot

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AgentPanel.tsx  ConfirmationDialog.tsx  FilePanel.tsx  IconButton.tsx  Layout.tsx  PathPrompt.tsx  TerminalPanel.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: agents.ts  api.ts  format.ts  layout.ts  platform.ts  tabState.ts  types.ts  windowSession.ts
src/styles/: app.css
