[package]
name = "littlecommander"
version = "0.1.0"
description = "A minimal dual-pane file manager."
authors = ["LittleCommander"]
edition = "2021"

[lib]
name = "littlecommander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs-next = "2"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
trash = "5"
